fixed footer alignment for mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1533,6 +1533,9 @@ section {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer-column:last-child {
     margin-right: 0;
