--- a/sass/sections/_footer.sass
+++ b/sass/sections/_footer.sass
@@ -89,6 +89,7 @@
       margin-bottom: 40px
     &-block
       flex-direction: column
+      align-items: center
     &-column:last-child
       margin-right: 0
   .copyright-block
